// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commandLine \`$ \` is not command 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "$ ",
        "text": "$ ",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine \`$\` is not command 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "$",
        "text": "$",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine \`$s\` is not command 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "$not command",
        "text": "$not command",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine Simple command with $ 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "$ command",
        "symbol": "$",
        "text": "command",
        "type": "commandLine",
      },
    ],
    "type": "line",
  },
]
`;

exports[`commandLine Simple command with % 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "% command",
        "symbol": "%",
        "text": "command",
        "type": "commandLine",
      },
    ],
    "type": "line",
  },
]
`;
